# ray_tracer

./: Cargo.toml  shell.nix
src/: camera.rs  context.rs  lib.rs  main.rs  pipeline.rs  raytrace.wgsl  sphere.rs
