[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
winit = "0.28"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.75"
wgpu = "0.18"
cfg-if = "1.0.0"
instant = "0.1.12"
env_logger = "0.11.1"
log = "0.4"
reqwest = "0.11.24"
rfd = "0.13.0"
futures = { version = "0.3.30", features = ["thread-pool"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "ray_tracer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
